--- a/.gitignore
+++ b/.gitignore
@@ -89,6 +89,7 @@ celerybeat-schedule
 
 # dotenv
 ./.env
+.env
 
 # virtualenv
 .venv
@@ -116,4 +117,4 @@ dj_local_conf_old.json
 **/*~
 **/#*#
 **/.#*
-docker-compose.yml
+docker-compose.y*ml
