--- a/.gitignore
+++ b/.gitignore
@@ -1,87 +1,77 @@
-# Byte-compiled / optimized / DLL files
-__pycache__/
+# Temporary and binary files
+*~
 *.py[cod]
-*$py.class
+*.so
+*.cfg
+!.isort.cfg
+!setup.cfg
+*.orig
+*.log
+*.pot
+**/__pycache__
+.cache/*
+.*.swp
+*/.ipynb_checkpoints/*
+.DS_Store
+.mypy_cache/*
 
-# Distribution, packaging, PyInstaller
-.Python
-env/
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-*.egg-info/
-.installed.cfg
+# Project files
+.ropeproject
+.project
+.pydevproject
+.settings
+.idea
+.vscode
+tags
+profile_default/
+ipython_config.py
+
+# Package files
 *.egg
-*.manifest
-*.spec
-pip-log.txt
-pip-delete*.txt
+*.eggs/
+.installed.cfg
+*.egg-info
+environment.lock.yml
 
-# Unit test / coverage reports
-htmlcov/
-.tox/
+# Unittest and coverage
+htmlcov/*
 .coverage
 .coverage.*
-.cache
-nosetests.xml
+.tox/*
+.nox/*
+junit*.xml
 coverage.xml
-*.cover
-.hypothesis/
-.pytest_cache/
+.pytest_cache/*
 
-# C extension, Translations
-*.so
-*.mo
-*.pot
+# Build and docs folder/files
+build/*
+site/*
+dist/*
+sdist/*
+docs/api/*
+docs/_rst/*
+docs/_build/*
+cover/*
+MANIFEST
 
-# editors: vscode, emacs, Mac
-.vscode
-**/*~
-**/#*#
-**/.#*
-.DS_Store
+# Per-project virtualenvs
+.venv*/
+.conda*/
 
-# Django, Flask, Scrapy, Sphinx, mkdocs
-# PyBuilder, Jupyter, SageMath, celery beat
-*.log
-local_settings.py
-instance/
-.webassets-cache
-.scrapy
-scratchpaper.*
-docs/_build/
-/site
-target/
-.ipynb_checkpoints
-celerybeat-schedule
-*.sage.py
+# Configuration files
+*.env
 
-# dotenv, virtualenv, pyenv, mypy
-./.env
-.venv
-venv/
-ENV/
-.python-version
-.mypy_cache/
-
-# Spyder/Rope project settings
-.spyderproject
-.spyproject
-.ropeproject
-
-# datajoint, notes, nwb export
+# DataJoint files
 dj_local_c*.json
-temp*
-*nwb
+dj_remote_c*.json
+.datajoint_config.json
 
-# mkdocs documentation
-docs/site
+# Misc files/folders
+pyproject.code-workspace
+scratch/*
+src/deangelis_lab/experimental/*
+.junk/*
+
+# Secret keys
+*.ssh
+*.pem
